# omniscope-viewer

./: =2.2.2  LICENSE  setup.cfg  tox.ini
src/omniscopeViewer/: __init__.py  napari.yaml
src/omniscopeViewer/control/: __init__.py
src/omniscopeViewer/control/devices/: esp32camserial.py  interface.py  micro_manager.py  omniscope.py  omniscopeSocketTest.py  omniscopeTest.py  opencv.py  standaloneSimpleSocketServer.py
src/omniscopeViewer/misc/: getAllHostnames.py  testOmniscopeWithoutNapari.py  test_esp32decodemjpeg.py  test_esp32downloadjpeg.py  test_mjpegstream.py  test_multimjpegreceive.py  test_napari.py
src/omniscopeViewer/misc/ESP32/: SocketConnection.ino
src/omniscopeViewer/misc/socket/: displayFrameSocket.py  scanAllESP32IPs.py  setHostIP.py  setUniqueID.py  updateHostIP.py
src/omniscopeViewer/misc/socket/ESP32/SocketConnection/: SocketConnection.ino  SocketReceiver.py
src/omniscopeViewer/misc/socket/ESP32/SocketConnectionMultiPort/: SocketConnectionMultiPort.ino
src/omniscopeViewer/misc/socket/PIO/: platformio.ini
src/omniscopeViewer/misc/socket/PIO/main/: main.ino
src/omniscopeViewer/misc/socket/testMultiprocessing/: clientMultiport.py  clients.py  scanAllESP32IPs.py  server.py  serverAsync.py  serverAsyncESP32.py  serverMultiplePorts (deconv-PC15911's conflicted copy 2023-10-27).py  serverMultiplePorts.py  testSocketPYthon.py
src/omniscopeViewer/ui/: __init__.py  widgets.py
