[metadata]
name = omniscopeViewer
version = 0.0.1
author = Benedict Diederich
author_email = benedictdied@gmail.com
url = https://github.com/Matchboxscope/omniscope-viewer
license = MIT
description = A napari plugin to display multiple ESP32 cameras
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Matchboxscope/omniscope-viewer/issues
    Documentation = https://github.com/Matchboxscope/omniscope-viewer#README.md
    Source Code = https://github.com/Matchboxscope/omniscope-viewer
    User Support = https://github.com/Matchboxscope/omniscope-viewer/issues

[options]
packages = find:
include_package_data = True
install_requires =
    superqt
    numpy
    np_image_buffer
    opencv-python
    opencv-contrib-python
    tifffile
    h5py
    napari
    qtpy
    Flask
    pymmcore-plus >= 0.6.7
    pymmcore-widgets

python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    omniscopeViewer = omniscopeViewer:napari.yaml

[options.package_data]
omniscopeViewer = napari.yaml
